--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,14 +13,7 @@ a {
 
 * {
   box-sizing: border-box;
-}
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+  margin: 0px;
+  padding: 0px;
 }
