sverstal polovinu main page

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,3 +17,43 @@ a {
   margin: 0px;
   padding: 0px;
 }
+
+@font-face {
+  font-family: Indycton Ucs;
+  src: url(../pages/assets/fonts/Indycton-Ucs.ttf);
+}
+
+@font-face {
+  font-family: Russo One;
+  src: url(../pages/assets/fonts/RussoOne-Regular.ttf);
+
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: Montserrat;
+  src: url(../pages/assets/fonts/Montserrat-Medium.ttf);
+
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: Montserrat;
+  src: url(../pages/assets/fonts/Montserrat-SemiBold.ttf);
+
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: Montserrat;
+  src: url(../pages/assets/fonts/Montserrat-Bold.ttf);
+
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: Montserrat;
+  src: url(../pages/assets/fonts/Montserrat-ExtraBold.ttf);
+
+  font-weight: 800;
+}
