--- a/pages/components/page/main/Preview/Preview.module.scss
+++ b/pages/components/page/main/Preview/Preview.module.scss
@@ -6,11 +6,16 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    // justify-content: space-between;
+    row-gap: 230px;
 
     position: relative;
 
     min-height: 848px;
+
+    z-index: 1;
+
+    background-color: rgb(152, 151, 151);
 
     &__menu {
         display: flex;
@@ -132,5 +137,27 @@
         border-radius: 50%;
 
         opacity: 0.5;
+    }
+}
+
+.testSlider{
+    position: absolute !important;
+    top: 0px;
+
+    width: inherit;
+    height: 100%;
+
+    z-index: -1;
+
+    display: flex;
+    flex-direction: column;
+
+    position: relative;
+
+    &__dots{
+        border: 1px solid red;
+
+        display: flex;
+        column-gap: 18px;
     }
 }
