--- a/pages/components/page/main/Preview/Preview.module.scss
+++ b/pages/components/page/main/Preview/Preview.module.scss
@@ -6,7 +6,6 @@
 
     display: flex;
     flex-direction: column;
-    // justify-content: space-between;
     row-gap: 230px;
 
     position: relative;
@@ -101,63 +100,14 @@
         transition: 1s;
 
         width: inherit;
-    }
 
-    &__dots {
-        display: flex;
-        margin: 0 auto;
-
-        column-gap: 18px;
-
-        margin-bottom: 47px;
-    }
-}
-
-.dots {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    position: relative;
-
-    &__input{
-        display: none;
-
-        &:checked + .dots__label{
-            opacity: 1;
-        }
-    }
-
-    &__label{
-        width: 8px;
-        height: 8px;
-
-        background-color: #fff;
-
-        border-radius: 50%;
-
-        opacity: 0.5;
+        object-fit: cover;
     }
 }
 
 .testSlider{
-    position: absolute !important;
+    position: absolute;
     top: 0px;
 
-    width: inherit;
-    height: 100%;
-
     z-index: -1;
-
-    display: flex;
-    flex-direction: column;
-
-    position: relative;
-
-    &__dots{
-        border: 1px solid red;
-
-        display: flex;
-        column-gap: 18px;
-    }
 }
