--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,6 +18,11 @@ a {
   padding: 0px;
 }
 
+.control-dots{
+  margin: 0px !important;
+  bottom: 47px !important;
+}
+
 @font-face {
   font-family: Indycton Ucs;
   src: url(../pages/assets/fonts/Indycton-Ucs.ttf);
