--- a/pages/components/page/main/Preview/Preview.module.scss
+++ b/pages/components/page/main/Preview/Preview.module.scss
@@ -14,7 +14,7 @@
 
     z-index: 1;
 
-    background-color: rgb(152, 151, 151);
+    border: 1px solid red;
 
     &__menu {
         display: flex;
