--- a/pages/components/page/main/Contacts/Contact.module.scss
+++ b/pages/components/page/main/Contacts/Contact.module.scss
@@ -9,6 +9,8 @@
     margin: 0 auto;
     margin-top: 130px;
 
+    padding-bottom: 71px;
+
     position: relative;
 
     &::before{
@@ -16,10 +18,10 @@
         display: inline-block;
 
         position: absolute;
-        bottom: 0px;
+        bottom: -1px;
 
         width: 100%;
-        height: 210px;
+        height: 285px;
 
         z-index: -1;
 
@@ -84,8 +86,25 @@
             width: 100%;
             max-width: 510px;
 
+            position: relative;
+
             &:first-child{
                 margin-bottom: 10px;
+            }
+
+            &::before{
+                content: '';
+                display: inline-block;
+
+                position: absolute;
+                left: -23px;
+                top: 7px;
+
+                width: 16px;
+                height: 23px;
+
+                background-image: url(../../../../assets/main/contact/adress.svg);
+                background-repeat: no-repeat;
             }
         }
 
