--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -107,7 +107,7 @@
                 width: 16px;
                 height: 23px;
 
-                background-image: url(../../assets/footer/adress.svg);
+                background-image: url(../../public/footer/adress.svg);
                 background-repeat: no-repeat;
                 background-position: center;
 
