--- a/globals.scss
+++ b/globals.scss
@@ -39,40 +39,40 @@ a {
 
 @font-face {
   font-family: Indycton Ucs;
-  src: url(../public/fonts/Indycton-Ucs.ttf);
+  src: url(./public/fonts/Indycton-Ucs.ttf);
 }
 
 @font-face {
   font-family: Russo One;
-  src: url(../public/fonts/RussoOne-Regular.ttf);
+  src: url(./public/fonts/RussoOne-Regular.ttf);
 
   font-weight: 400;
 }
 
 @font-face {
   font-family: Montserrat;
-  src: url(../public/fonts/Montserrat-Medium.ttf);
+  src: url(./public/fonts/Montserrat-Medium.ttf);
 
   font-weight: 500;
 }
 
 @font-face {
   font-family: Montserrat;
-  src: url(../public/fonts/Montserrat-SemiBold.ttf);
+  src: url(./public/fonts/Montserrat-SemiBold.ttf);
 
   font-weight: 600;
 }
 
 @font-face {
   font-family: Montserrat;
-  src: url(../public/fonts/Montserrat-Bold.ttf);
+  src: url(./public/fonts/Montserrat-Bold.ttf);
 
   font-weight: 700;
 }
 
 @font-face {
   font-family: Montserrat;
-  src: url(../public/fonts/Montserrat-ExtraBold.ttf);
+  src: url(./public/fonts/Montserrat-ExtraBold.ttf);
 
   font-weight: 800;
 }
