--- a/components/Team-Direction/List/List.module.scss
+++ b/components/Team-Direction/List/List.module.scss
@@ -4,42 +4,41 @@
 
     margin: 0 auto;
     margin-top: 117px;
+    margin-bottom: 100px;
 
     display: grid;
-    grid-template-columns: repeat(2, 600px);
+    grid-template-columns: repeat(2, auto);
     gap: 30px;
-
-    margin-bottom: 100px;
 }
 
 .item {
     display: grid;
     grid-template-areas:
-        'img fio'
-        'img text'
+        'img title'
+        'img subtitle'
         'img button';
-    gap: 30px;
+    column-gap: 30px;
+    row-gap: 40px;
+
+    padding: 45px;
+
+    background-color: #fff;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
 
     width: 100%;
     max-width: 600px;
 
-    padding: 45px;
-
-    background-color: #FFFFFF;
-    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
-    border-radius: 20px;
-
     &__img {
-        width: 240px;
-        height: 270px;
+        grid-area: img;
+
+        max-width: 240px;
 
         border-radius: 20px;
-
-        grid-area: img;
     }
 
-    &__name {
-        grid-area: fio;
+    &__title {
+        grid-area: title;
 
         font-family: 'Montserrat';
         font-style: normal;
@@ -53,8 +52,8 @@
         max-width: 229px;
     }
 
-    &__text {
-        grid-area: text;
+    &__subtitle {
+        grid-area: subtitle;
 
         font-family: 'Montserrat';
         font-style: normal;
