add adaptive in main

--- a/components/main/About/About.module.scss
+++ b/components/main/About/About.module.scss
@@ -3,6 +3,7 @@
     margin-top: 94px;
     margin-bottom: 113px;
 
+    min-width: 320px;
     width: 100%;
     max-width: 1245px;
 
@@ -57,3 +58,5 @@
         grid-area: button;
     }
 }
+
+@import './AboutMedia.module.scss';
