--- a/components/main/Video/Video.module.scss
+++ b/components/main/Video/Video.module.scss
@@ -1,4 +1,5 @@
 .video{
+    min-width: 320px;
     width: 100%;
     max-width: 1920px;
 
@@ -10,3 +11,5 @@
         height: inherit;
     }
 }
+
+@import './VideoMedia.module.scss';
