--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -3,6 +3,7 @@
 
     padding-top: 48px;
 
+    min-width: 320px;
     width: 100%;
     max-width: 1920px;
 
@@ -30,13 +31,11 @@
     }
 
     &__navigation {
-        display: grid;
-        grid-template-columns: repeat(3, auto);
-        grid-auto-rows: max-content;
-        row-gap: 19px;
-
         width: 100%;
-        max-width: 1000px;
+        max-width: 812px;
+
+        display: flex;
+        column-gap: 30px;
     }
 
     &__link {
@@ -139,3 +138,5 @@
     width: 33px;
     height: 33px;
 }
+
+@import './FooterMedia.module.scss';
