--- a/components/main/Header/Header.module.scss
+++ b/components/main/Header/Header.module.scss
@@ -7,6 +7,7 @@
     margin-top: 50px;
     margin-bottom: 42px;
 
+    min-width: 320px;
     width: 100%;
     max-width: 600px;
 
@@ -48,3 +49,5 @@
         width: 100%;
     }
 }
+
+@import './HeaderMedia.module.scss';
