--- a/components/main/Team/Team.module.scss
+++ b/components/main/Team/Team.module.scss
@@ -1,4 +1,5 @@
 .team {
+    min-width: 320px;
     width: 100%;
     max-width: 1920px;
 
@@ -57,7 +58,7 @@
         margin-top: 80px;
 
         display: grid;
-        grid-template-columns: repeat(4, 285px);
+        grid-template-columns: repeat(4, minmax(100px,285px));
         gap: 30px;
     }
 }
@@ -65,12 +66,12 @@
 .teachers {
     position: relative;
 
-    width: 100%;
-    max-width: 285px;
-    width: 285px;
     height: 100%;
     min-height: 440px;
     max-height: 440px;
+
+    width: 100%;
+    max-width: inherit;
 
     &_first{
         grid-column: 1/3;
@@ -89,6 +90,10 @@
     &__img {
         width: inherit;
         height: inherit;
+
+        object-fit: cover;
+
+        border-radius: 30px;
     }
 
     &__name {
@@ -108,3 +113,5 @@
         max-width: 180px;
     }
 }
+
+@import './TeamMedia.module.scss';
