add adaptive in direction, team, secHeader

--- a/components/Direction/Preview/Preview.module.scss
+++ b/components/Direction/Preview/Preview.module.scss
@@ -1,6 +1,7 @@
 .preview {
     padding-top: 68px;
 
+    min-width: 320px;
     width: 100%;
     max-width: 1920px;
 
@@ -69,3 +70,5 @@
         }
     }
 }
+
+@import './PreviewMedia.module.scss';
