--- a/components/Direction/List/List.module.scss
+++ b/components/Direction/List/List.module.scss
@@ -1,9 +1,10 @@
 .list {
+    min-width: 320px;
     width: 100%;
     max-width: 1228px;
 
     margin: 0 auto;
-    margin-top: 117px;
+    margin-top: 92px;
     margin-bottom: 100px;
 
     display: grid;
@@ -15,7 +16,6 @@
     display: grid;
     grid-template-areas:
         'img title'
-        'img subtitle'
         'img button';
     column-gap: 30px;
     row-gap: 40px;
@@ -52,22 +52,9 @@
         max-width: 229px;
     }
 
-    &__subtitle {
-        grid-area: subtitle;
-
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 22px;
-
-        color: #000000;
-
-        width: 100%;
-        max-width: 210px;
-    }
-
     &__button {
         grid-area: button;
     }
 }
+
+@import './ListMedia.module.scss';
