--- a/components/SecHeader/SecHeader.module.scss
+++ b/components/SecHeader/SecHeader.module.scss
@@ -1,4 +1,5 @@
 .SecHeader {
+    min-width: 320px;
     width: 100%;
     max-width: 1920px;
 
@@ -14,6 +15,7 @@
         align-items: center;
         column-gap: 62px;
 
+        min-width: 320px;
         width: 100%;
         max-width: 1230px;
 
@@ -60,8 +62,12 @@
 
         cursor: pointer;
 
+        white-space: nowrap;
+
         &_active{
             color: #1491FF;
         }
     }
 }
+
+@import './SecHeaderMedia.module.scss';
