--- a/components/News/List/List.module.scss
+++ b/components/News/List/List.module.scss
@@ -1,3 +1,68 @@
+.wrapper {
+    margin: 0 auto;
+    margin-top: 80px;
+
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+    align-items: center;
+
+    min-width: 320px;
+    width: 100%;
+    max-width: 1920px;
+}
+
+.info {
+    display: none;
+    flex-direction: column;
+    row-gap: 20px;
+
+    &__date {
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 24px;
+
+        color: #000000;
+
+        text-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+    }
+
+    &__text {
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 24px;
+
+        color: #000000;
+
+        text-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+    }
+
+    &__button {
+        height: fit-content;
+        width: fit-content;
+
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 20px;
+        text-transform: uppercase;
+
+        color: #000000;
+
+        background-color: transparent;
+
+        border: 3px solid #000000;
+        border-radius: 30px;
+
+        padding: 12px 24px;
+    }
+}
+
 .list {
     display: grid;
     grid-template-columns: repeat(4, auto);
@@ -6,9 +71,6 @@
 
     width: 100%;
     max-width: 1228px;
-
-    margin: 0 auto;
-    margin-top: 80px;
 }
 
 .item {
@@ -48,3 +110,5 @@
         color: #000000;
     }
 }
+
+@import './ListMedia.module.scss';
