--- a/components/News/Preview/Preview.module.scss
+++ b/components/News/Preview/Preview.module.scss
@@ -1,6 +1,7 @@
 .preview {
     position: relative;
 
+    min-width: 320px;
     width: 100%;
     max-width: 1920px;
 
@@ -8,6 +9,9 @@
 
     &__img {
         width: 100%;
+        height: 100%;
+
+        object-fit: cover;
     }
 
     &__info {
@@ -84,3 +88,5 @@
         cursor: pointer;
     }
 }
+
+@import './PreviewMedia.module.scss';
