--- a/components/NewsItem/AllNews/AllNews.module.scss
+++ b/components/NewsItem/AllNews/AllNews.module.scss
@@ -1,4 +1,5 @@
 .allNews {
+    min-width: 320px;
     width: 100%;
     max-width: 1300px;
 
@@ -77,7 +78,7 @@
 
         color: #000000;
 
-        margin-top: 22px;
+        margin-top: 26px;
         margin-bottom: 4px;
     }
 
@@ -91,3 +92,5 @@
         color: #000000;
     }
 }
+
+@import './AllNewsMedia.module.scss';
