--- a/components/Form/Form.module.scss
+++ b/components/Form/Form.module.scss
@@ -4,7 +4,7 @@
 
     position: fixed;
     top: 0px;
-    left: 0px;
+    left: -150%;
 
     z-index: 99;
 
@@ -13,6 +13,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    transition: 1s;
+
+    &_open{
+        left: 0px;
+    }
 
     &__info {
         display: flex;
