--- a/components/Form/Form.module.scss
+++ b/components/Form/Form.module.scss
@@ -1,21 +1,24 @@
 .form {
+    min-width: 320px;
     width: 100%;
     height: 100%;
 
     position: fixed;
     top: 0px;
-    left: -150%;
+    right: -150%;
+
+    overflow: auto;
 
     z-index: 99;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
     transition: 1s;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     &_open{
-        left: 0px;
+        right: 0px;
     }
 
     &__info {
@@ -26,8 +29,10 @@
     }
 
     &__wrapper {
+        min-width: 320px;
         width: 100%;
         max-width: 1380px;
+        height: fit-content;
 
         padding: 54px 75px 54px 56px;
 
@@ -124,6 +129,8 @@
         outline: none;
 
         border-radius: 40px;
+        border: none;
+
         opacity: 0.5;
 
         width: 100%;
@@ -192,6 +199,8 @@
         width: 100%;
         max-width: 285px;
 
+        cursor: pointer;
+
         &_svg {
             stroke: black;
 
@@ -222,3 +231,5 @@
         cursor: pointer;
     }
 }
+
+@import './FormMedia.module.scss';
