add teamAPI and contactsAPI and fix link

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -131,6 +131,16 @@
         line-height: 22px;
 
         color: #FFFFFF;
+
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__piybeep{
+
+        &_span{
+            text-decoration: underline;
+        }
     }
 }
 
