--- a/globals.scss
+++ b/globals.scss
@@ -4,6 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  scroll-behavior: smooth;
 }
 
 a {
@@ -19,7 +21,7 @@ a {
 }
 
 // Пока тестовое, если не понравится уберу
-.component{
+.component {
   min-height: 100vh;
   min-width: 320px;
 }
@@ -83,8 +85,8 @@ a {
   font-weight: 800;
 }
 
-@media screen and (max-width: 530px){
-  .control-dots{
+@media screen and (max-width: 530px) {
+  .control-dots {
     top: 85%;
   }
 }
