--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -1,3 +1,11 @@
+.error{
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+
+    max-width: 300px;
+}
+
 .footer {
     background-color: #1491FF;
 
