--- a/components/main/Reviews/Reviews.module.scss
+++ b/components/main/Reviews/Reviews.module.scss
@@ -1,3 +1,9 @@
+.error{
+    display: flex;
+    flex-direction:column;
+    row-gap:20px;
+}
+
 .reviews {
     min-width: 320px;
     width: 100%;
@@ -13,6 +19,13 @@
 
     display: flex;
     justify-content: center;
+
+    &__none{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 
     &__info {
         width: 100%;
