--- a/components/main/Team/Team.module.scss
+++ b/components/main/Team/Team.module.scss
@@ -1,3 +1,10 @@
+.error{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
+}
+
 .team {
     min-width: 320px;
     width: 100%;
