fix titile in news

--- a/components/News/Preview/Preview.module.scss
+++ b/components/News/Preview/Preview.module.scss
@@ -26,6 +26,7 @@
         'button text';
         column-gap: 62px;
         row-gap: 56px;
+        grid-template-columns: min-content;
 
         width: 100%;
         max-width: 1216px;
