--- a/components/main/Header/Header.module.scss
+++ b/components/main/Header/Header.module.scss
@@ -42,9 +42,11 @@
         font-weight: 400;
         font-size: 15.6px;
         line-height: 19px;
-        letter-spacing: 1.7px;
 
         color: #1665C2;
+
+        text-transform: uppercase;
+        text-align: center;
 
         width: 100%;
     }
