--- a/components/main/Reviews/Reviews.module.scss
+++ b/components/main/Reviews/Reviews.module.scss
@@ -29,7 +29,9 @@
 
     &__info {
         width: 100%;
-        max-width: 1280px;
+        max-width: 1278px;
+
+        padding: 0px 24px;
 
         display: flex;
     }
