--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -39,11 +39,17 @@
     }
 
     &__navigation {
-        width: 100%;
-        max-width: 812px;
+        // width: 100%;
+        // max-width: 812px;
 
-        display: flex;
-        column-gap: 30px;
+        // display: flex;
+        // column-gap: 30px;
+
+        display: grid;
+        grid-template-columns: repeat(3, min-content);
+        column-gap: 46px;
+        row-gap: 30px;
+        grid-template-rows: min-content;
     }
 
     &__link {
