--- a/components/Form/Form.module.scss
+++ b/components/Form/Form.module.scss
@@ -5,20 +5,26 @@
 
     position: fixed;
     top: 0px;
-    right: -150%;
+    left: 0px;
 
     overflow: auto;
 
-    z-index: 99;
+    z-index: -1;
 
-    transition: 1s;
+    transition: .3s;
+
+    opacity: 0;
 
     display: flex;
     align-items: center;
     justify-content: center;
 
+    background-color: rgba($color: #000000, $alpha: 0.4);
+
     &_open{
-        right: 0px;
+        z-index: 99;
+
+        opacity: 1;
     }
 
     &__info {
