--- a/components/main/Team/Team.module.scss
+++ b/components/main/Team/Team.module.scss
@@ -18,7 +18,9 @@
 
     &__info {
         width: 100%;
-        max-width: 1232px;
+        max-width: 1278px;
+
+        padding: 0px 24px;
     }
 
     &__header {
