--- a/components/NewsItem/Slider/SliderMedia.module.scss
+++ b/components/NewsItem/Slider/SliderMedia.module.scss
@@ -23,21 +23,17 @@
 
 @media screen and (max-width: 600px){
     .slider{
-        margin: 0px;
-        padding: 0px;
+        overflow: hidden;
 
-        min-width: 690px;
-
-        &__img{
-            min-width: 344px;
+        &__swiper{
+            min-width: 700px;
         }
     }
 }
 
-@media screen and (max-width: 400px){
+@media screen and (max-width: 420px){
     .slider{
-        min-width: 550px;
-
+        padding: 0px 16px;
         &__img{
             min-width: 274px;
         }
@@ -46,10 +42,9 @@
 
 @media screen and (max-width: 340px){
     .slider{
-        min-width: 530px;
 
-        &__img{
-            min-width: 270px;
+        &__swiper{
+            min-width: 550px;
         }
     }
 }
