fix media 1420 to 1600

--- a/components/SecHeader/SecHeader.module.scss
+++ b/components/SecHeader/SecHeader.module.scss
@@ -45,7 +45,8 @@
         width: 100%;
 
         display: flex;
-        justify-content: space-between;
+
+        column-gap: 47px;
     }
 
     &__link {
