--- a/components/main/About/AboutMedia.module.scss
+++ b/components/main/About/AboutMedia.module.scss
@@ -1,10 +1,12 @@
-@media screen and (max-width: 1420px) {
+@media screen and (max-width: 1600px) {
     .about {
         display: flex;
         flex-direction: column;
 
         width: 100%;
-        max-width: 976px;
+        // max-width: 976px;
+
+        padding: 0px 24px;
     }
 }
 
@@ -16,7 +18,6 @@
 
 @media screen and (max-width: 768px) {
     .about {
-        margin-top: 250px;
 
         &__title {
             font-size: 56px;
@@ -46,6 +47,12 @@
             font-size: 17px;
             line-height: 140%;
         }
+    }
+}
+
+@media screen and (max-width: 420px){
+    .about{
+        padding: 0px 16px;
     }
 }
 
