--- a/components/main/Contacts/Header/HeaderMedia.module.scss
+++ b/components/main/Contacts/Header/HeaderMedia.module.scss
@@ -1,13 +1,13 @@
-@media screen and (max-width: 1420px) {
+@media screen and (max-width: 1600px) {
     .header {
         display: flex;
         flex-direction: column;
         align-items: unset;
 
-        max-width: 976px;
+        // max-width: 976px;
 
         &__subtitle {
-            max-width: 600px;
+            max-width: unset;
         }
     }
 }
