--- a/components/News/Flags/Flags.module.scss
+++ b/components/News/Flags/Flags.module.scss
@@ -8,47 +8,34 @@
 
     display: flex;
     justify-content: flex-end;
-}
 
-.flags {
-    display: flex;
-    align-items: center;
-    column-gap: 12px;
+    // &__pagination {
 
-    &__button {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    //     li {
+    //         position: relative;
 
-        width: 20px;
-        height: 20px;
+    //         >a {
+    //             position: absolute;
+    //             left: 50%;
+    //             top: 50%;
 
-        cursor: pointer;
+    //             transform: translate(-50%, -50%);
+    //             font-family: 'Montserrat';
+    //             font-style: normal;
+    //             font-weight: 500;
+    //             font-size: 18px;
+    //             line-height: 22px;
 
-        border: none;
-        background-color: transparent;
+    //             color: #000000;
 
-        transition: .3s;
+    //             cursor: pointer;
+    //         }
 
-        &:hover {
-            opacity: 0.5;
-        }
-    }
-
-    &__number {
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 22px;
-
-        color: #000000;
-
-        width: 20px;
-        text-align: center;
-
-        cursor: pointer;
-    }
+    //         &-active{
+    //             border: 1px solid red !important;
+    //         }
+    //     }
+    // }
 }
 
 @import './FlagsMedia.module.scss';
