--- a/components/News/Flags/FlagsMedia.module.scss
+++ b/components/News/Flags/FlagsMedia.module.scss
@@ -24,5 +24,14 @@
 
         margin-top: 50px;
         margin-bottom: 98px;
+
+        &__pagination{
+
+            li{
+                min-width: 30px !important;
+            }
+        }
     }
+
+
 }
