--- a/components/News/Flags/FlagsMedia.module.scss
+++ b/components/News/Flags/FlagsMedia.module.scss
@@ -18,20 +18,31 @@
     }
 }
 
-@media screen and (max-width: 420px){
+@media screen and (max-width: 500px){
     .wrapper{
         padding: 0px 15px;
 
         margin-top: 50px;
         margin-bottom: 98px;
 
+        justify-content: center;
+
         &__pagination{
 
             li{
-                min-width: 30px !important;
+                min-width: 40px !important;
             }
         }
     }
+}
 
+@media screen and (max-width: 390px){
+    .wrapper{
+        &__pagination{
 
+            li{
+                min-width: 32px !important;
+            }
+        }
+    }
 }
