--- a/components/Educator/Info/Info.module.scss
+++ b/components/Educator/Info/Info.module.scss
@@ -101,8 +101,14 @@
     }
 
     &__img {
+        width: 100%;
         max-width: 120px;
+
+        min-height: 120px;
         max-height: 120px;
+
+        object-fit: cover;
+        object-position: top;
 
         border-radius: 50%;
     }
