--- a/components/Educator/Preview/PreviewMedia.module.scss
+++ b/components/Educator/Preview/PreviewMedia.module.scss
@@ -20,7 +20,10 @@
             grid-area: img;
 
             max-width: 180px;
+            min-width: 180px;
+            
             max-height: 180px;
+            min-height: 180px;
         }
 
         &__title{
