--- a/components/News/List/ListMedia.module.scss
+++ b/components/News/List/ListMedia.module.scss
@@ -6,6 +6,13 @@
 
         max-width: 976px;
     }
+
+    .item{
+
+        &__img{
+            max-width: 305px;
+        }
+    }
 }
 
 @media screen and (max-width: 1024px) {
@@ -14,7 +21,7 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 860px) {
     .list {
         grid-template-columns: repeat(2, auto);
 
@@ -34,9 +41,20 @@
     .info {
         display: flex;
     }
+
+    .item{
+
+        &__img{
+            max-width: 186px;
+            min-width: 186px;
+
+            max-height: 121px;
+            min-height: 121px;
+        }
+    }
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 450px) {
     .wrapper {
         padding: 0px 16px;
 
@@ -51,6 +69,9 @@
 
         &__img {
             margin-bottom: 7px;
+
+            min-width: unset;
+            max-width: unset;
         }
 
         &__date {
@@ -81,6 +102,14 @@
         &__button {
             font-size: 14px;
             line-height: 17px;
+        }
+    }
+
+    .item{
+
+        &__img{
+            max-height: 77px;
+            min-height: 77px;
         }
     }
 }
