--- a/components/NewsItem/AllNews/AllNews.module.scss
+++ b/components/NewsItem/AllNews/AllNews.module.scss
@@ -66,6 +66,12 @@
     &__img {
         width: 100%;
 
+        max-width: 285px;
+        max-height: 200px;
+        min-height: 200px;
+
+        object-fit: cover;
+
         border-radius: 20px;
     }
 
