--- a/components/NewsItem/AllNews/AllNewsMedia.module.scss
+++ b/components/NewsItem/AllNews/AllNewsMedia.module.scss
@@ -42,6 +42,11 @@
             font-size: 16px;
             line-height: 20px;
         }
+
+        &__img{
+            min-height: 181px;
+            max-height: 181px;
+        }
     }
 }
 
@@ -68,6 +73,11 @@
 
         &__slide {
             max-width: 234px;
+        }
+
+        &__img{
+            min-height: 163px;
+            max-height: 163px;
         }
     }
 }
