fix format in current news

--- a/components/NewsItem/Info/Info.module.scss
+++ b/components/NewsItem/Info/Info.module.scss
@@ -61,6 +61,8 @@
         font-weight: 500;
         font-size: 18px;
         line-height: 22px;
+        
+        white-space:break-spaces;
 
         color: #000000;
     }
