--- a/components/Footer/FooterMedia.module.scss
+++ b/components/Footer/FooterMedia.module.scss
@@ -107,6 +107,15 @@
     }
 }
 
+@media screen and (max-width: 342px){
+    .footer{
+
+        &__root{
+            font-size: 16px;
+        }
+    }
+}
+
 @media screen and (max-width: 330px) {
     .footer {
 
