fix problem in text and add more info link and advantage

--- a/components/main/About/AboutMedia.module.scss
+++ b/components/main/About/AboutMedia.module.scss
@@ -7,6 +7,10 @@
         // max-width: 976px;
 
         padding: 0px 24px;
+
+        &__title{
+            margin-top: 0px;
+        }
     }
 }
 
