--- a/components/main/Contacts/Header/Header.module.scss
+++ b/components/main/Contacts/Header/Header.module.scss
@@ -3,7 +3,7 @@
     grid-template-areas:
         'title text'
         'title button';
-    align-items: center;
+    align-items: end;
     row-gap: 50px;
     column-gap: 30px;
 
