--- a/components/main/Team/Team.module.scss
+++ b/components/main/Team/Team.module.scss
@@ -30,6 +30,7 @@
             'title button';
         column-gap: 30px;
         row-gap: 50px;
+        align-items: end;
     }
 
     &__title {
