--- a/globals.scss
+++ b/globals.scss
@@ -31,6 +31,10 @@ a {
   bottom: 47px !important;
 }
 
+.dot{
+  box-shadow: none !important;
+}
+
 .slick-dots li.slick-active button:before {
   color: #fff !important;
 }
