--- a/components/main/Team/TeamMedia.module.scss
+++ b/components/main/Team/TeamMedia.module.scss
@@ -6,6 +6,7 @@
         &__header {
             display: flex;
             flex-direction: column;
+            align-items: unset;
         }
 
         &__list {
