fix: *Исправил косяки с фотками *Добавил в менюшки расписание *Поправил видео с frameBorder и т д

--- a/components/Educator/Info/Info.module.scss
+++ b/components/Educator/Info/Info.module.scss
@@ -1,4 +1,4 @@
-.wrapper{
+.wrapper {
     min-width: 320px;
     width: 100%;
     max-width: 729px;
@@ -15,6 +15,8 @@
     display: flex;
     flex-direction: column;
     row-gap: 30px;
+
+    padding-left: 70px;
 
     &__item {
         display: flex;
