--- a/components/Team/List/ListMedia.module.scss
+++ b/components/Team/List/ListMedia.module.scss
@@ -8,6 +8,12 @@
     }
 
     .item {
+        &__info {
+            justify-content: unset;
+        }
+    }
+
+    .item {
         max-width: 976px;
 
         grid-template-columns: 240px;
@@ -31,8 +37,8 @@
     }
 }
 
-@media screen and (max-width: 768px){
-    .list{
+@media screen and (max-width: 768px) {
+    .list {
         margin-top: 72px;
     }
 }
@@ -47,7 +53,7 @@
 
         padding: 20px;
 
-        &__info{
+        &__info {
             row-gap: 15px;
         }
 
@@ -63,26 +69,26 @@
             margin-bottom: 5px;
         }
 
-        &__img{
+        &__img {
             max-width: 120px;
             max-height: 135px;
         }
     }
 }
 
-@media screen and (max-width: 420px){
-    .list{
+@media screen and (max-width: 420px) {
+    .list {
         margin-top: 49px;
     }
 }
 
-@media screen and (max-width: 410px){
-    .item{
+@media screen and (max-width: 410px) {
+    .item {
         flex-direction: column;
         align-items: center;
         row-gap: 30px;
 
-        &__img{
+        &__img {
             max-width: 160px;
             max-height: 180px;
         }
