--- a/components/Educator/Preview/Preview.module.scss
+++ b/components/Educator/Preview/Preview.module.scss
@@ -2,7 +2,7 @@
     background-image: url(../../../public/images/educator/backgroundImage.png);
     background-repeat: no-repeat;
     background-size: cover;
-    
+
     min-width: 320px;
     width: 100%;
     max-width: 1920px;
@@ -26,19 +26,21 @@
         display: flex;
         flex-direction: column;
         row-gap: 28px;
+
+        padding-left: 70px;
     }
 
-    &__img{
+    &__img {
         position: absolute;
-        left: -300px;
+        left: -265px;
         top: 0px;
 
         width: 100%;
         max-width: 285px;
-        
+
         max-height: 285px;
         min-height: 285px;
-        
+
         object-fit: cover;
         object-position: top;
 
