--- a/components/Team/List/List.module.scss
+++ b/components/Team/List/List.module.scss
@@ -31,7 +31,6 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        row-gap: 29px;
     }
 
     &__img {
@@ -40,11 +39,10 @@
         width: 100%;
         max-width: 240px;
 
-        height: auto;
-        max-height: 300px;
+        height: 270px;
 
         object-fit: cover;
-        object-position: top;
+        object-position: center;
 
         border-radius: 20px;
     }
@@ -77,8 +75,6 @@
 
         width: 100%;
         max-width: 210px;
-
-        margin-bottom: 9px;
     }
 
     &__button {
