--- a/globals.scss
+++ b/globals.scss
@@ -31,7 +31,7 @@ a {
   bottom: 47px !important;
 }
 
-.dot{
+.dot {
   box-shadow: none !important;
 }
 
@@ -49,12 +49,13 @@ a {
   transition: .3s;
 }
 
-
 // Для ant design pagination\\
-.ant-pagination-next :hover, .ant-pagination-prev :hover{
+.ant-pagination-next :hover,
+.ant-pagination-prev :hover {
   // border: 1px solid red;
   background: transparent !important;
 }
+
 .ant-pagination-item-active {
   background: transparent !important;
   border-color: transparent !important;
