--- a/components/Educator/Info/Info.module.scss
+++ b/components/Educator/Info/Info.module.scss
@@ -42,37 +42,14 @@
         line-height: 22px;
 
         color: #000000;
+
+        white-space: pre-wrap;
     }
 
     &__list {
         display: flex;
         flex-direction: column;
         row-gap: 5px;
-    }
-
-    &__li {
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 22px;
-
-        color: #000000;
-
-        list-style-type: none;
-
-        position: relative;
-
-        &::before {
-            content: '—';
-
-            display: inline-block;
-            width: 10px;
-            height: 1px;
-
-            position: absolute;
-            left: -25px;
-        }
     }
 }
 
