--- a/components/Form/Form.module.scss
+++ b/components/Form/Form.module.scss
@@ -1,31 +1,6 @@
 .form {
-    min-width: 320px;
-    width: 100%;
-    height: 100%;
-
-    position: fixed;
-    top: 0px;
-    left: 0px;
-
-    overflow: auto;
-
-    z-index: -1;
-
-    transition: .3s;
-
-    opacity: 0;
-
     display: flex;
-    align-items: center;
     justify-content: center;
-
-    background-color: rgba($color: #000000, $alpha: 0.4);
-
-    &_open{
-        z-index: 99;
-
-        opacity: 1;
-    }
 
     &__info {
         display: flex;
@@ -45,6 +20,10 @@
         background: #FFFFFF;
         box-shadow: 0px 10px 30px rgba(0, 18, 54, 0.1);
         border-radius: 20px;
+
+        &_shadow {
+            box-shadow: none;
+        }
     }
 
     &__header {
@@ -56,6 +35,18 @@
         text-transform: uppercase;
 
         color: #1491FF;
+
+        &_row {
+            color: #1491FF;
+            font-family: Montserrat;
+            font-size: 85px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 105%;
+
+            width: 100%;
+            max-width: 573px;
+        }
 
         &_span {
             color: #fff;
@@ -144,7 +135,7 @@
 
         background-color: #DBE0E3;
 
-        &_error{
+        &_error {
             border-color: red;
             color: red;
         }
@@ -169,7 +160,7 @@
 
                 color: #fff;
 
-                &>svg>path{
+                &>svg>path {
                     fill: white;
                 }
             }
