--- a/components/PreviewContacts/PreviewContactsMedia.module.scss
+++ b/components/PreviewContacts/PreviewContactsMedia.module.scss
@@ -69,6 +69,12 @@
             row-gap: 15px;
         }
     }
+
+    .list {
+        &__map {
+            height: 400px;
+        }
+    }
 }
 
 @media screen and (max-width: 440px) {
@@ -99,6 +105,13 @@
 
         &__text {
             font-size: 16px;
+        }
+    }
+
+    .list {
+
+        &__map {
+            height: 250px;
         }
     }
 }
