fix: * Исправил форму Yup и отправление на бэк * Исправил слайдер

--- a/components/Form/Form.module.scss
+++ b/components/Form/Form.module.scss
@@ -135,6 +135,10 @@
 
         background-color: #DBE0E3;
 
+        &::-webkit-inner-spin-button {
+            appearance: none;
+        }
+
         &_error {
             border-color: red;
             color: red;
