--- a/components/NewsItem/Slider/SliderMedia.module.scss
+++ b/components/NewsItem/Slider/SliderMedia.module.scss
@@ -1,82 +1,52 @@
-@media screen and (max-width: 1420px){
-    .slider{
+@media screen and (max-width: 1420px) {
+    .slider {
         max-width: 1050px;
-
-        &__img{
-            max-height: 268px;
-            min-height: 268px;
-        }
     }
 }
 
-@media screen and (max-width: 1100px){
-    .slider{
+@media screen and (max-width: 1100px) {
+    .slider {
         max-width: unset;
 
         padding: 0px 24px;
-
-        &__img{
-            max-height: 247px;
-            min-height: 247px;
-        }
     }
 }
 
 @media screen and (max-width: 800px) {
-    .slider{
+    .slider {
 
-        &__button{
+        &__button {
             display: none;
         }
     }
 }
 
-@media screen and (max-width: 768px){
-    .slider{
+@media screen and (max-width: 600px) {
 
-        &__img{
-            min-height: 177px;
-            max-height: 177px;
-        }
-    }
-}
-
-@media screen and (max-width: 600px){
-    .slider{
+    .slider {
         overflow: hidden;
 
-        &__swiper{
-            min-width: 700px;
+        &__more {
+            padding: 0px;
         }
     }
 }
 
-@media screen and (max-width: 420px){
-    .slider{
+@media screen and (max-width: 420px) {
+    .slider {
         padding: 0px 16px;
-        &__img{
-            min-width: 274px;
 
-            min-height: 194px;
+        &__more {
+            padding: 0px;
         }
     }
 }
 
-@media screen and (max-width: 340px){
-    .slider{
+@media screen and (max-width: 370px) {
+    .slider {
 
-        &__swiper{
-            min-width: 550px;
-        }
-    }
-}
-
-@media screen and (max-width: 320px){
-    .slider{
-
-        &__img{
-            min-height: 154px;
-            max-height: 154px;
+        &__slide {
+            min-width: 175px;
         }
     }
 }
