--- a/components/Educator/Slider/Slider.module.scss
+++ b/components/Educator/Slider/Slider.module.scss
@@ -15,8 +15,23 @@
         column-gap: 16px;
     }
 
+    &__slide {
+        height: auto;
+        max-height: 338px;
+
+        border-radius: 20px;
+
+        overflow: hidden;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
     &__img {
-        width: inherit;
+        width: 100%;
+        height: auto;
+        min-height: 100%;
 
         border-radius: 20px;
     }
@@ -34,7 +49,7 @@
         }
     }
 
-    &__back{
+    &__back {
         margin-top: 30px;
         margin-bottom: 80px;
 
@@ -44,10 +59,6 @@
         display: flex;
         justify-content: flex-end;
     }
-}
-
-.swiper-slide{
-    border: 1px solid red !important;
 }
 
 @import './SliderMedia.module.scss';
