--- a/components/PreviewContacts/PreviewContacts.module.scss
+++ b/components/PreviewContacts/PreviewContacts.module.scss
@@ -1,6 +1,5 @@
 .wrapper {
     width: 100%;
-    max-width: 1920px;
 
     margin: 0 auto;
 }
@@ -49,6 +48,8 @@
     max-width: 1920px;
 
     position: relative;
+
+    margin: 0 auto;
 
     &__map {
 
