--- a/components/Educator/Preview/Preview.module.scss
+++ b/components/Educator/Preview/Preview.module.scss
@@ -2,6 +2,7 @@
     background-image: url(../../../public/images/educator/backgroundImage.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center center;
 
     min-width: 320px;
     width: 100%;
