fix: Зависимости и выбор ссылок * Добавил новую либу * Сделал обработчик ссылок в тексте

--- a/components/NewsItem/Info/Info.module.scss
+++ b/components/NewsItem/Info/Info.module.scss
@@ -61,10 +61,14 @@
         font-weight: 500;
         font-size: 18px;
         line-height: 22px;
-        
-        white-space:break-spaces;
+
+        white-space: break-spaces;
 
         color: #000000;
+
+        a {
+            color: #1491FF;
+        }
     }
 }
 
