--- a/components/ContactsInfo/ContactsInfo.module.scss
+++ b/components/ContactsInfo/ContactsInfo.module.scss
@@ -49,11 +49,25 @@
 .slider {
     width: 100%;
     max-width: 585px;
-    height: auto;
+    height: 100%;
+    max-height: 625px;
 
     grid-area: slider;
 
+    border-radius: 20px;
+
+    &__slide {
+        overflow: hidden;
+
+        border-radius: 20px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
     &__img {
+        width: 100%;
         height: 100%;
         object-fit: cover;
     }
